2002-08-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/stepmake/python-module-rules.make: 
	* stepmake/stepmake/python-module-vars.make: 
	* stepmake/stepmake/shared-library-vars.make: Add Cygwin support.

	* stepmake/stepmake/generic-vars.make:
	* cygwin/GNUmakefile: Fix Cygwin build detection.
	
	* stepmake/stepmake/shared-library-rules.make: Remove version juggling.

	* stepmake/stepmake/shared-library-targets.make: Default target
	includes version, add target libFOO.

	* lily/main.cc: Temporary fix for access to scm_read_opts array
	from shared Cygwin library.

2002-08-08  Rune Zedeler <rune@zedeler.dk>
	
	* ly/property-init.ly: Added phrasingSlurUp, phrasingSlurDown and
	phrasingSlurBoth.

	* input/mutopia/R.Schumann/romanze-op28-2.ly: Added.

	* input/sondag-morgen/*: renamed files from input/SondagMorgen/*
	
2002-08-08  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/beam.cc (struct Int_set): typo.

	* mf/feta-beugel.mf (code): braces should start at 0, not 1.

	* lily/include/lily-guile.hh (scm_int2num): guile 1.4 compatibility. 

	* scm/grob-description.scm (all-grob-descriptions): set
	X-offset-callbacks for TextScript

	* lily/stem.cc (invisible_b): don't use support_head(), since it
	sets stem direction.

	* lily/beam.cc (struct Int_set): don't get stuck inserting
	interval segments of length 0.0.

	* scripts/convert-ly.py:  break-align conversion.

2002-08-06  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/*.cc (process_music): gh_int2scm -> scm_int2num

2002-08-06  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el: Also "C-xC-s" sets default command to LilyPond.

2002-08-05  Rune Zedeler <rune@zedeler.dk>

	* mf/feta-eindelijk.mf: Fix silly typo in 16th and shorter rests.

2002-08-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* stepmake/bin/make-version.py: robustify.

	* input/test/rhythm-excercise.ly: new file

	* input/test/blank-notes.ly: new file

	* lily/note-head.cc (head_extent): robustness fix.
	