@@ -19,7 +19,7 @@ default:
 # force these: Make can't know these have to be generated in advance
 $(outdir)/my-lily-parser.o: $(outdir)/parser.hh
 $(outdir)/my-lily-lexer.o: $(outdir)/parser.hh
-$(outdir)/lexer.o: $(outdir)/parser.hh
+$(outdir)/lexer.o: $(outdir)/parser.hh $(outdir)/version.hh
 
 $(outdir)/kpath.o: $(outdir)/version.hh
 $(outdir)/lily-guile.o: $(outdir)/version.hh
