@@ -66,18 +66,18 @@ Axis_group_engraver::finalize ()
       && gh_number_p (ly_cdr (dims)))
     {
       staffline_->set_extent (Grob::preset_extent_proc, Y_AXIS);
-      staffline_->set_grob_property ("extent-Y", dims);
+      staffline_->set_grob_property ("Y-extent", dims);
     }
 
   dims = get_property ("minimumVerticalExtent");
   if (gh_pair_p (dims) && gh_number_p (ly_car (dims))
       && gh_number_p (ly_cdr (dims)))
-    staffline_->set_grob_property ("minimum-extent-Y", dims);
+    staffline_->set_grob_property ("minimum-Y-extent", dims);
 
   dims = get_property ("extraVerticalExtent");
   if (gh_pair_p (dims) && gh_number_p (ly_car (dims))
       && gh_number_p (ly_cdr (dims)))
-    staffline_->set_grob_property ("extra-extent-Y", dims);
+    staffline_->set_grob_property ("extra-Y-extent", dims);
 
   Grob *  it = unsmob_grob (get_property ("currentCommandColumn"));
 
