@@ -1,3 +1,11 @@
+2002-08-09  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* input/test/preset-extent.ly (texidoc): added file.
+
+	* scripts/convert-ly.py: add extent rule.
+
+	* lily/grob.cc: chang extent-[XY] to [XY]-extent globally.
+
 2002-08-09  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* stepmake/stepmake/python-module-rules.make: 
